# ricepile

./: .gitignore  LICENSE  README.md  massdata.txt  pyproject.toml
.rice/: pyvenv.cfg
src/ricepile/: .ricepile.py.swp  __init__.py  ricepile.py
