[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ricepile"
version = "0.0.0.9000"
authors = [
  { name="Eric Barefoot", email="eabarefoot@gmail.com" },
]
description = "A package to manage rice pile experiments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ericbarefoot/ricepile"
Issues = "https://github.com/ericbarefoot/ricepile/issues"